added reflect-ui-react as git submodule dep. updated project structure.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
-  "name": "reflect.bridged.xyz",
+  "name": "reflect-ui.com",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "web": "yarn workspace web next dev"
   },
-  "dependencies": {
-    "next": "9.5.5",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
-  },
-  "devDependencies": {
-    "@types/node": "^14.14.2",
-    "@types/react": "^16.9.53",
-    "typescript": "^4.0.3"
-  }
+  "workspaces": ["web", "packages/*"]
 }
