--- a/web/package.json
+++ b/web/package.json
@@ -11,13 +11,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "9.5.5",
-    "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "@emotion/core": "^11.0.0",
+    "@emotion/css": "^11.1.3",
+    "@reflect-ui/react": "*",
+    "next": "10.0.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.2",
-    "@types/react": "^16.9.53",
-    "typescript": "^4.0.3"
+    "@types/node": "^14.14.16",
+    "@types/react": "^17.0.0",
+    "typescript": "^4.1.3"
   }
 }
