--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@emotion/core": "^11.0.0",
     "@emotion/css": "^11.1.3",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@reflect-ui/react": "*",
     "next": "10.0.4",
     "react": "17.0.1",
