--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "web": "yarn workspace web next dev"
+    "web": "yarn workspace web next dev",
+    "git:update": "git submodule update --init --recursive"
   },
-  "workspaces": ["web", "packages/*"]
+  "workspaces": [
+    "web",
+    "packages/*"
+  ]
 }
