--- a/web/package.json
+++ b/web/package.json
@@ -12,17 +12,17 @@
   },
   "dependencies": {
     "@emotion/core": "^11.0.0",
-    "@emotion/css": "^11.1.3",
-    "@emotion/react": "^11.1.4",
-    "@emotion/styled": "^11.0.0",
+    "@emotion/css": "^11.10.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@reflect-ui/react": "*",
-    "next": "10.0.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "next": "^12.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^14.14.16",
-    "@types/react": "^17.0.0",
-    "typescript": "^4.1.3"
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
+    "typescript": "^4.8.4"
   }
 }
